[build-system]
requires = [
    "setuptools",
    "matplotlib",
    "numpy>=1.20.0",
    "pandas",
    "PyYAML",
    "scikit-allel",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sklearn-crfsuite",
    "tqdm",
    "uncertainty-calibration",
    "xgboost",
    "torch"
]
build-backend = "setuptools.build_meta"