[metadata]
name = gnomix
version = 0.0.7
author = Helgi Hilmarsson & Arvind Kumar
author_email = helgi37@gmail.com
description = A fast, scalable, and accurate local ancestry method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/gnomix
project_urls =
    Bug Tracker = https://github.com/AI-sandbox/gnomix/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Free for non-commercial use
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src